"update the website "

--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
           <img class="img-fluid rounded w-100 am"  src="./img/about2.jpeg" alt="error loading image">
         </div>
         <div class="col-lg-5 px-4">
-          <h3 class="mb-4"> Front-End Web Developer</h3>
-          <p>I'm Jayesh Patidar a self oriented & skilled web developer pursuing my B.tech from MITS Gwalior in 3rd year IT department. 
-            Done intern at <b>Sparks foundation Singapore</b> & have certifications in Javascript, CSS, HTML, full stack & front end essential training.
+          <h3 class="mb-4">MERN STACK DEVELOPER</h3>
+          <p>I'm Jayesh Patidar a self oriented & skilled web developer pursuing my B.tech from MITS Gwalior in IT-IOT departmenT. 
+            Done intern at <b>TeachingHub</b> & have certifications in Javascript, CSS, HTML, full stack & front end essential training.
             Additionally, I'm the head of Technical financial and management teams in different clubs & societies in my college.
             I am enthusiastic learner currently working on website and also a member of <b>Software Development Club MITS</b>.</p>
           <div class="row align-items-centre btncv">
             <div class="col-lg-7">
-              <a  href="./img/Resume.pdf" download="resume.pdf" class="btn"  >Download CV</a>
+              <a  href="./img/resume.pdf" download="resume.pdf" class="btn"  >Download CV</a>
             </div>
             </div>  
         </div>
@@ -152,7 +152,7 @@
               <div class="item-arrow"> </div>
               <h6>Madhav Institute of Technology & Science, Gwalior || 2020-2024</h6>
               <p>Bachelor of Technology in Internet of Things offered by Information Technology</p>
-              <h6>CGPA : 8.84/10(Upto 4th Semester)</h6>
+              <h6>CGPA : 8.34/10(Upto 7th Semester)</h6>
             </div>
 
             <div class="resume-item col-sm-12">
@@ -166,7 +166,7 @@
               <div class="item-arrow"> </div>
               <h6>Gurukul School, Dhamnod || Upto 2016</h6>
               <p>High School</p>
-              <h6>CGPA : 8.5/10(10th Standard)</h6>
+              <h6>CGPA : 8.4/10(10th Standard)</h6>
             </div>
           </div>
         </div>
@@ -178,24 +178,24 @@
             </div>
             <div class="resume-item col-sm-12">
               <div class="item-arrow"> </div>
-              <h6>The Spark Foundation, Singapore || 1 Month</h6>
+              <h6>Teachinghub, Gwalior|| 3 Month</h6>
               <br>
-              <p>Completed internship and created a website on <i> Basic Banking System </i></p>
-              <h6>Skills Acquired : Web Development</h6>
+              <p>Created resonsive website for coaching Institute as a <i>"Success Point"</i></p>
+              <h6>Skills Acquired :HTML, CSS , JavaScript</h6>
             </div>
   
             <div class="resume-item col-sm-12">
               <div class="item-arrow "> </div>
-              <h6>Technical Head of Scrabble Club MITS || 2021- Present </h6>
-              <p>Working as a guider or instructor for technical work</p>
-              <h6>Skills Acquired : Technical Management</h6>
+              <h6>Mindcoders, Indore || Jan 2024 - present </h6>
+              <p>Work with team members on <i>DMS and LMS</i></p>
+              <h6>Skills Acquired :MERN STACK</h6>
             </div>
   
             <div class="resume-item col-sm-12">
               <div class="item-arrow"> </div>
-              <h6>Treasurer in Hindi Club, MITS || 2021-Present</h6>
-              <p> Work for club funds and sponsorships </p>
-              <h6>Skills Acquired : Financial Management & Teamwork</h6>
+              <h6>Technical Head of Scrabble Club MITS || 2021- 2023</h6>
+              <p> Working as a guider or instructor for technical work</p>
+              <h6>Skills Acquired :Technical Management</h6>
             </div>
           </div>
         </div>
@@ -242,7 +242,7 @@
     </div>
 
     <div class="skill">
-      <div class="skill-name">C</div>
+      <div class="skill-name">React.js</div>
       <div class="skill-bar" >
         <div class="skill-per" per="70"></div>
       </div>
@@ -252,30 +252,30 @@
 
 <div class="col-lg-5  col-sm-11  py-3 my-4 sk "  data-aos="fade-right" data-aos-duration="1800">
    <div class="skill">
-            <div class="skill-name">C++</div>
+            <div class="skill-name">Node.js</div>
             <div class="skill-bar" >
               <div class="skill-per" per="70"></div>
             </div>
     </div>
 
         <div class="skill">
-          <div class="skill-name">Time Management</div>
+          <div class="skill-name">Express.js</div>
           <div class="skill-bar" >
-            <div class="skill-per" per="100"></div>
+            <div class="skill-per" per="60"></div>
           </div>
        </div>
 
       <div class="skill">
-          <div class="skill-name">Team Work</div>
+          <div class="skill-name">SQL</div>
          <div class="skill-bar" >
-          <div class="skill-per" per="100"></div>
+          <div class="skill-per" per="70"></div>
          </div>
       </div>
 
     <div class="skill">
-      <div class="skill-name">Leadership</div>
+      <div class="skill-name">C++</div>
       <div class="skill-bar" >
-        <div class="skill-per" per="100"></div>
+        <div class="skill-per" per="80"></div>
       </div>
     </div>
   </div>      
@@ -322,13 +322,13 @@
       <div class="card cdr" style="width:20rem;">
         <img class=" card-img-top  img-fluid" style=" height:15rem;"  src="./img/work3.png" alt="error loading image">
         <div class="card-body">
-         <h5 class="card-title">Weather Calculator</h5>
+         <h5 class="card-title">NOC Website</h5>
          <p class="card-text">
-          Simple & easily accessible website for weather forecasting updates around the world.
-          <li> Technology Used: HTML, CSS, JavaScript, APIs</li>
+          Simple & easy website for students to track, approve and download NOC certificate.
+          <li> Technology Used:HTML, CSS, JavaScript, Node.js, MYSQL</li>
         </p>
         <br>
-         <a  href="https://github.com/24Jayesh/weather.git" class="btn mi" target="_blank"  >More Info</a>
+         <a  href="https://drive.google.com/file/d/1YPx19dTfQeWzqt5dul4M8lMxMn6BDVma/view?usp=sharing" class="btn mi" target="_blank"  >More Info</a>
         </div>
 
       </div>
@@ -340,13 +340,13 @@
       <div class="card cdr" style="width:20rem;">
         <img class=" card-img-top  img-fluid" style=" height:15rem;"  src="./img/work1.png" alt="error loading image">
         <div class="card-body">
-         <h5 class="card-title">Age Calculator</h5>
+         <h5 class="card-title">Movie Review</h5>
          <p class="card-text">
-          Calculating your age at any moment becomes handy and effortless using this web application.
-          Highly accurate and precise.
-          <li> Technology Used: HTML, CSS, JavaScript</li>
+          Seen the all details of movie like rating, trailer, cast character .
+          Highly accurate and detailed view.
+          <li> Technology Used: HTML, CSS, JavaScript, API</li>
          </p>
-         <a  href="https://github.com/24Jayesh/age-calculator.git" class="btn mi" target="_blank" >More Info</a>
+         <a  href="https://github.com/24Jayesh/movie-review" class="btn mi" target="_blank" >More Info</a>
         </div>
 
        </div>
