--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
     <div class="col-lg-3   col-sm-12 my-5" data-aos="flip-right" data-aos-duration="1500">
       <div class="card cdr" style="width:20rem;">
-        <img class=" card-img-top  img-fluid" style=" height:15rem;"  src="./img/work3.png" alt="error loading image">
+        <img class=" card-img-top  img-fluid" style=" height:15rem;"  src="./img/work3.jpg" alt="error loading image">
         <div class="card-body">
          <h5 class="card-title">NOC Website</h5>
          <p class="card-text">
@@ -338,7 +338,7 @@
 
     <div class="col-lg-3    col-sm-12 my-5" data-aos="flip-right" data-aos-duration="1500">
       <div class="card cdr" style="width:20rem;">
-        <img class=" card-img-top  img-fluid" style=" height:15rem;"  src="./img/work1.png" alt="error loading image">
+        <img class=" card-img-top  img-fluid" style=" height:15rem;"  src="./img/work1.jpg" alt="error loading image">
         <div class="card-body">
          <h5 class="card-title">Movie Review</h5>
          <p class="card-text">
