"upadte in link"

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             I am enthusiastic learner currently working on website and also a member of <b>Software Development Club MITS</b>.</p>
           <div class="row align-items-centre btncv">
             <div class="col-lg-7">
-              <a  href="./img/resume.pdf" download="resume.pdf" class="btn"  >Download CV</a>
+              <a  href="/img/resume.pdf" download="resume.pdf" class="btn"  >Download CV</a>
             </div>
             </div>  
         </div>
